Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.6.5 (??/??/20??):
	General:
	* Build-time fixes for Solaris.  (Paul Townsend)

	AIM and ICQ:
	* Messages from some mobile clients are no longer displayed as
	  Chinese characters (broken in 2.6.4)

	MSN:
	* File transfer requests will no longer cause a crash if you delete the
	  file before the other side accepts.
	* Recieved files will no longer hold an extra lock after completion,
	  meaning they can be moved or deleted without complaints from your OS.
	* Buddies who sign in from a second location will no longer cause an
	  unnecessary chat window to open.

	XMPP:
	* Added support for the SCRAM-SHA-1 SASL mechanism.  This is only
	  available when built without Cyrus SASL support.
	* When getting info on a domain-only (server) JID, show uptime
	  (when given by the result of the "last query") and don't show status as
	  offline.
	* Do not crash when attempting to register for a new account on Windows.
	* Fix file transfer with clients that do not support Entity Capabilities
	  (e.g. Spark)

version 2.6.4 (11/29/2009):
	libpurple:
	* Actually emit the hold signal for media calls.
	* Fix building the GnuTLS plugin with older versions of GnuTLS.
	* Fix DNS TXT query resolution.
	* Don't send Proxy-Authorization headers to HTTP proxy servers until we've
	  received a "407 Proxy Authentication Required" response from the server.
	  (thecrux)
	* Added "MXit" protocol plugin, supported and maintained by the MXit folks
	  themselves (MXit Lifestyle (Pty) Ltd.)

	General:
	* New 'plugins' sub-command to 'debug' command (i.e. '/debug plugins')
	  to announce the list of loaded plugins (in both Finch and Pidgin).
	* Always rejoin open chats after an account reconnects.

	AIM and ICQ:
	* Better rate limit calculations and other improvements.  (Aman Gupta)
	* More detailed error messages when messages fail to send.  (Aman Gupta)